<resources>
    <string name="app_name">Xandra</string>

    <!-- ConnectActivity -->
    <string name="enter_server_address">Enter server address</string>
    <string name="connect">Connect</string>

    <!-- MainActivity -->
    <string name="connected">Connected</string>
    <string name="not_connected">Not connected. Trying to connect…</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="pref_theme_title">Theme</string>
    <array name="pref_theme_entries">
        <item>Light</item>
        <item>Dark</item>
    </array>
    <string name="pref_port_title">Port</string>
    <string name="pref_lock_title">Show when locked</string>
    <string name="pref_lock_summary">Stay accessible while device is locked.</string>
    <string name="pref_sensitivity_title">Sensitivity</string>
    <string name="pref_sensitivity_message">Multiplicative factor for mouse movement.</string>
    <string name="pref_acceleration_title">Acceleration</string>
    <string name="pref_acceleration_message">Polynomial acceleration (1.0 = no acceleration, reasonable values are between 1.0 and 1.5).</string>
    <string name="pref_scrollthreshold_title">Scroll threshold</string>
    <string name="pref_scrollthreshold_message">A two-finger gesture has to move this many pixels to send a scroll event.</string>
    <string name="pref_tapdelay_title">Tap Delay</string>
    <string name="pref_tapdelay_message">Maximum time in milliseconds of a gesture to be recognized as a tap (left click).</string>
    <string name="pref_taptol_title">Tap Tolerance</string>
    <string name="pref_taptol_message">Allowed movement in pixels of a gesture to be recognized as a tap (left click).</string>

    <!-- Buttons -->
    <string name="button_esc">esc</string>
    <string name="button_tab">tab</string>
    <string name="button_ctrl">ctrl</string>
    <string name="button_sup">sup</string>
    <string name="button_alt">alt</string>
    <string name="button_left">◀</string>
    <string name="button_up">▲</string>
    <string name="button_down">▼</string>
    <string name="button_right">▶</string>
    <string name="button_voldn">♪-</string>
    <string name="button_volup">♪+</string>
    <string name="button_voltog">♪⊘</string>
    <string name="button_mid">mid</string>
    <string name="button_ins">ins</string>
    <string name="button_del">del</string>
    <string name="button_home">home</string>
    <string name="button_end">end</string>
    <string name="button_pgup">PgUp</string>
    <string name="button_pgdn">PgDn</string>
    <string name="button_f1">f1</string>
    <string name="button_f2">f2</string>
    <string name="button_f3">f3</string>
    <string name="button_f4">f4</string>
    <string name="button_f5">f5</string>
    <string name="button_f6">f6</string>
    <string name="button_f7">f7</string>
    <string name="button_f8">f8</string>
    <string name="button_f9">f9</string>
    <string name="button_f10">f10</string>
    <string name="button_f11">f11</string>
    <string name="button_f12">f12</string>

</resources>
