<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016  Dennis Dast
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="de.ddast.xandra.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_input"
        android:layout_alignParentTop="true"
        android:paddingBottom="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <de.ddast.xandra.NoCursorEditText
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:id="@+id/buffer_edit"
            android:inputType="textNoSuggestions|textMultiLine"
            android:cursorVisible="true"
            android:textSize="14sp"
            android:maxLines="1"
            app:backgroundTint="@color/colorAccent"
            android:enabled="false" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="25dp"
            android:text="…"
            android:id="@+id/button_togglekeys"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/layout_input"
        android:layout_above="@id/layout_keys"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_border"
        android:background="@drawable/border"
        android:gravity="center"
        android:layout_margin="2dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:id="@+id/imageview_mouse"
                android:src="@drawable/ic_mouse_24dp" />

            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_status" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_keys"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <Button
                style="@style/KeyButton"
                android:text="@string/button_esc"
                android:id="@+id/button_esc" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_tab"
                android:id="@+id/button_tab" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_ctrl"
                android:id="@+id/button_ctrl" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_sup"
                android:id="@+id/button_sup" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_alt"
                android:id="@+id/button_alt" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_left"
                android:id="@+id/button_left" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_down"
                android:id="@+id/button_down" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_up"
                android:id="@+id/button_up" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_right"
                android:id="@+id/button_right" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_voldn"
                android:id="@+id/button_voldn" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_volup"
                android:id="@+id/button_volup" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_voltog"
                android:id="@+id/button_voltog" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_mid"
                android:id="@+id/button_mid" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_ins"
                android:id="@+id/button_ins" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_del"
                android:id="@+id/button_del" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_home"
                android:id="@+id/button_home" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_end"
                android:id="@+id/button_end" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_pgup"
                android:id="@+id/button_pgup" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_pgdn"
                android:id="@+id/button_pgdn" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f1"
                android:id="@+id/button_f1" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f2"
                android:id="@+id/button_f2" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f3"
                android:id="@+id/button_f3" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f4"
                android:id="@+id/button_f4" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f5"
                android:id="@+id/button_f5" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f6"
                android:id="@+id/button_f6" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f7"
                android:id="@+id/button_f7" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f8"
                android:id="@+id/button_f8" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f9"
                android:id="@+id/button_f9" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f10"
                android:id="@+id/button_f10" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f11"
                android:id="@+id/button_f11" />

            <Button
                style="@style/KeyButton"
                android:text="@string/button_f12"
                android:id="@+id/button_f12" />

        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>
